[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-tracker-ai-mcp"
version = "0.1.0"
description = "Track cryptocurrency prices and portfolio valuations with support for major coins and simple PnL calculations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
crypto_tracker_ai_mcp = "crypto_tracker_ai_mcp.server:main"
